# handy_hand_tracking

./: LICENSE  README.md  example.py  hands.py  landmark_detector.py  main.py  pyproject.toml
hand_tracking/: example.py  hands.py  landmark_detector.py
handy_hand_tracking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
